# ApertureOS

./: .editorconfig  .env.example  .gitignore  API.md  DECISIONS.md  PROMPTS.md  README.md  TECHNICAL_DEBT.md  docker-compose.yml  package.json  pixelforge_mvp_overview.html  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
ai-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai-service/src/: main.py
ai-service/src/api/: routes.py
ai-service/src/core/: background_removal.py  config.py  logging.py
ai-service/src/middleware/: security.py
ai-service/src/pixelforge_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-service/src/schemas/: background.py
ai-service/tests/: test_api.py
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_initial.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: admin.rs  ai.rs  auth.rs  health.rs  metrics.rs  mod.rs  projects.rs
backend/src/middleware/: auth.rs
backend/src/models/: audit.rs  auth.rs  mod.rs  project.rs
backend/src/repositories/: project_repository.rs
backend/src/services/: ai_service.rs  auth_service.rs  mod.rs  project_service.rs
backend/src/utils/: errors.rs
backend/tests/: mod.rs
backend/tests/integration/: api_smoke_test.rs
backend/tests/unit/: project_validation_test.rs
common/: package.json  tsconfig.json
common/constants/: limits.ts
common/schemas/: project.ts
common/types/: editor.ts
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  PHOTOSHOP_PARITY_MATRIX.md
docs/adr/: 0001-monorepo-and-polyglot-stack.md
frontend/: .dockerignore  Dockerfile  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.d.ts
frontend/src/components/: editor-shell.svelte
frontend/src/routes/: +page.svelte
frontend/src/services/: api-client.ts
frontend/src/store/: auth-store.ts  project-store.ts
frontend/src/utils/: contracts.ts
frontend/tests/: api-client.test.ts
frontend/tests/e2e/: editor-shell.spec.ts  mvp-overview.spec.ts
scripts/: Caddyfile  run-ai-tests.sh  test-all.sh
wasm/: Cargo.toml
wasm/src/: lib.rs
