[package]
name = "pixelforge-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1.2"
