[package]
name = "pixelforge-desktop"
version = "0.1.0"
description = "PixelForge desktop app"
authors = ["PixelForge Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
